# CMake-Playground

./: .gitignore  CMakeLists.txt  Hello_CMake_Config.h.in  README.md  hello_cmake.cxx
CMake-Learning-Gist/: CMakeLists.txt  README.md
CMake-Learning-Gist/src/: CMakeLists.txt  main.cpp
CMake-Learning-Gist/src/factorial/: factorial.c
CMake-Learning-Gist/src/greeter/: greet.cpp
Compact-Advanced-Example/: CMakeLists.txt  hello_cmake.cxx
Compact-Advanced-Example/MathFunctions/: MathFunctions.h  my_sqrt.cxx
Compile_C_CPP/: CMakeLists.txt
Compile_C_CPP/include/: header.h
Compile_C_CPP/src/: source.c
Hello_CMake/: CMakeLists.txt  README.md
Link_C_CPP/: CMakeLists.txt
Link_C_CPP/include/: factorial.hpp  greet.hpp
Link_C_CPP/src/: factorial.cpp  greet.cpp  main.cpp
MathFunctions/: CMakeLists.txt
